--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,64 @@
+html {
+    height: 100%;
+}
+
+body {
+    background: #eeeeee;
+    font-family: sans-serif;
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+}
+
+#grid-container {
+    display: grid;
+    height: 100vh;
+    grid-template-columns: .5fr 1fr .5fr;
+    grid-template-rows: .5fr 1fr .5fr;
+}
+
+#container {
+    grid-row: 2/3;
+    grid-column: 2/3;
+    display: flex;
+    flex-direction: row;
+
+}
+
 canvas {
-    border: 2px;
+    background: #65AFE8;
+    background-image: linear-gradient(#4F88B5, #65AFE8);
+    box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.5);
+    max-width: 100%;
+}
+
+#controls {
+    margin-left: 10px;
+    margin-top: 10px;
+    border: 2px solid black;
+    padding: 5px;
+}
+
+section {
+    margin-bottom: 1em;
+}
+
+#playButton {
+    font-size: 1.2em;
+    width: 3.5em;
+    background-color: pink;
+    border: none;
+}
+
+button[data-playing="yes"]:after {
+    content: "Pause";
+}
+
+button[data-playing="no"]:after {
+    content: "Play";
+}
+
+#fsButton {
+    font-size: 1.2em;
+    width: 6em;
 }
