--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,40 +1,23 @@
 @import url('https://fonts.googleapis.com/css?family=Gloria+Hallelujah');
 
 html {
-    height: 100%;
     background: #F7F1A3;
     font-family: 'Gloria Hallelujah', sans-serif;
 }
 
 body {
-    background: #eeeeee;
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-}
-
-#grid-container {
-    display: grid;
-    height: 100vh;
-    grid-template-columns: .5fr 1fr .5fr;
-    grid-template-rows: .5fr 1fr .5fr;
     background: #F7F1A3;
-
-}
-
-#container {
-    grid-row: 2/3;
-    grid-column: 2/3;
     display: flex;
     flex-direction: row;
-
+    justify-content: center;
 }
 
 canvas {
     background: #65AFE8;
     background-image: linear-gradient(#4F88B5, #65AFE8);
     box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.5);
-    max-width: 100%;
+    width: 50%;
+    height: 40%;
 }
 
 #controls {
@@ -54,7 +37,7 @@ canvas {
 }
 
 section {
-    margin-bottom: 1em;
+    margin-bottom: 5px;
 }
 
 #playButton, #fsButton {
