Trying to fix radio buttons

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -198,7 +198,7 @@ audio {
     right: 0px;
 }
 
-/* RADIO BUTTONS */
+/* RADIO BUTTONS
 
 .radio input {
     position: absolute;
@@ -217,23 +217,83 @@ audio {
 
 .eggRadio:hover {
     cursor: pointer;
-    background-color: beige;
+    background-color: burlywood;
 }
 
 .eggRadio:after {
     content: "";
     position: absolute;
+    background-color: pink;
 }
 
 .radio input:checked ~ .eggRadio:after {
     display: block;
+    background-color: burlywood;
+}
+*/
+
+/* The container */
+.radio {
+  display: block;
+  position: relative;
+  padding-left: 35px;
+  margin-bottom: 12px;
+  cursor: pointer;
+  font-size: 22px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
+/* Hide the browser's default radio button */
+.radio input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+}
+
+/* Create a custom radio button */
+.eggRadio {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 25px;
+  width: 25px;
+  background-color: #eee;
+  border-radius: 50%;
+}
+
+/* On mouse-over, add a grey background color */
+.radio:hover input ~ .eggRadio {
+  background-color: #ccc;
+}
+
+/* When the radio button is checked, add a blue background */
+.radio input:checked ~ .eggRadio {
+  background-color: #2196F3;
+}
+
+/* Create the indicator (the dot/circle - hidden when not checked) */
+.eggRadio:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+/* Show the indicator (dot/circle) when checked */
+.radio input:checked ~ .eggRadio:after {
+  display: block;
+}
+
+/* Style the indicator (dot/circle) */
 .radio .eggRadio:after {
-    width: 20px;
-    height: 20px;
-    top: 10px;
-    left: 5px;
-    border-radius: 10px;
-    background-color: #f8ff47;
-0}
+ 	top: 9px;
+	left: 9px;
+	width: 8px;
+	height: 8px;
+	border-radius: 50%;
+	background: white;
+}
+
+
