--- a/stylesheet.css
+++ b/stylesheet.css
@@ -41,7 +41,7 @@ section {
 }
 
 #playButton,
-#fsButton {
+#fsButton, #makeGay {
     font-family: 'Gloria Hallelujah', sans-serif;
     font-size: 1.2em;
     background-color: #65AFE8;
@@ -53,7 +53,7 @@ section {
 }
 
 #playButton:hover,
-#fsButton:hover {
+#fsButton:hover, #makeGay:hover {
     background-color: white;
     color: #65AFE8;
     cursor: pointer;
@@ -70,12 +70,8 @@ button[data-playing="no"]:after {
 #fsButton {
     font-size: 1.2em;
     width: 6em;
+    padding: 0;
 }
-
-/*#left-side {
-    grid-row: 1;
-    grid-column: 2;
-}*/
 
 audio {
     margin: 5% 0;
@@ -84,10 +80,6 @@ audio {
 #trackSelect {
     background-color: #eeeeee;
     padding: 5px;
-}
-
-#fsButton {
-    padding: 0;
 }
 
 #volumeSlider,
